adicionado a tag article e a tag h1 e primeiras modificações no css

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
          <title>Maçola</title>
     </head>
     <body>
-    
+        <article>
+            <h1>Como Era a Vida de Vinicius Marsola Antes de Trabalha com TI?</h1>
+
+         </article>
     </body>
 </html>
