adicionado as tags h2, figure, figcaption e img, e no css foi modificado as tags img, h2 e figcaption.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     <body>
         <article>
             <h1>Como Era a Vida de Vinicius Marsola Antes de Trabalha com TI?</h1>
-
+            <h2>
+                Vinicius Marsola antes de entrar na carreira de programação gostava muito de faze besteirinhas e peripécias
+            </h2>
+            <figure>
+                <img src="./images/vinicius.jpeg" alt="Maçola" title="Maçola">
+                <figcaption>(Marsola, alec)</figcaption>
+            </figure>
          </article>
     </body>
 </html>
