adicionado a tag div com class parte1, e no css modificações da class parte1.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
                 <img src="./images/vinicius.jpeg" alt="Maçola" title="Maçola">
                 <figcaption>(Marsola, alec)</figcaption>
             </figure>
+            <div class="parte1">
+                <h2>2016</h2>
+                <p>
+                    Em 2016 
+                    <a href="https://www.facebook.com/vinicius.marsola.3">Vinicius Marsola </a>
+                      começou a sair para roles, como matinês e Hps e começou a conhecer as coisas boas da vida.
+                </p>
+            </div>
          </article>
     </body>
 </html>
