adicionado mais tags como p, img, h2 e figure e fim do projeto

--- a/index.html
+++ b/index.html
@@ -28,6 +28,23 @@
                     <a href="https://www.facebook.com/vinicius.marsola.3">Vinicius Marsola </a>
                       começou a sair para roles, como matinês e Hps e começou a conhecer as coisas boas da vida.
                 </p>
+                <p>
+                    Marsola chegou no seu auge em 2018 no terceiro ano do colegial. Nesse ano ele foi pra porto seguro na sua viagem de formatura, já estava sheypado e descolado. Também nesse ano ele criou seu insta Besteirinhas Produções e lançou sua marca de roupa 
+                    <a href="https://www.instagram.com/loaded_co/">Loaded</a>
+                    junto com mais dois amigos. 
+                </p>
+                <p>
+                    E não podemos deixar de citar uma curiosidade que Marsola sempre foi muito fã de Everson Zoio e 
+                    <a href="https://www.palheirosdoalek.com/">Alec Fumaça</a>
+                    .
+                </p>
+                <figure>
+                    <img src="./images/marsola.jpeg" alt="Alec" title="Alec">
+                    <figcaption>(Marsola no terceiro ano do colegial)</figcaption>
+                </figure>
+
+                <h2>Bonus</h2>
+                <img src="/images/besteirinhas.jpeg" alt="">
             </div>
          </article>
     </body>
